challenge-1/zookeeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: kafka
spec:
  ports:
  - port: 2181
    protocol: TCP
    targetPort: 2181
  selector:
    app: zookeeper
